--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!--
     *****************
-    DONE BY:-   TUMMALA KETHAN
+    DONE BY:-   Kshitij Mishra
     *****************
 -->
 
@@ -9,7 +9,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sorting Visualizer</title>
+    <title>Algorithmic Hallucinator</title>
 
     <link rel="stylesheet" href="./css/style.css">
 
@@ -27,7 +27,7 @@
             </div>
 
             <div class="header_right">
-                <p class="nav-heading">Sorting visualizer</p>
+                <p class="nav-heading">Algorithmic Hallucinator</p>
 
                 <div class="algos">
                     <button >Bubble</button>
