--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
                 <p class="nav-heading">Algorithmic Hallucinator</p>
 
                 <div class="algos">
-                    <button >Bubble</button>
-                    <button > Selection</button>
-                    <button > Insertion</button>
-                    <button > Merge</button>
-                    <button >Quick</button>
-                    <button style="margin-right: 0px;">Heap</button>
+                    <button style="padding:2px ;">Bubble</button>
+                    <button style="padding:2px "> Selection</button>
+                    <button style="padding:2px ;"> Insertion</button>
+                    <button style="padding:2px ;"> Merge</button>
+                    <button style="padding:2px ;">Quick</button>
+                    <button style="padding:2px ;">Heap</button>
                 </div>
             </div>
 
