--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Algorithmic Hallucinator</title>
+    <title>Sorting Hallucinator</title>
 
     <link rel="stylesheet" href="./css/style.css">
 
