--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </div>
 
             <div class="header_right">
-                <p class="nav-heading">Algorithmic Hallucinator</p>
+                <p class="nav-heading">Sorting Hallucinator</p>
 
                 <div class="algos">
                     <button style="padding:2px ;">Bubble</button>
