--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
                 <p class="nav-heading">Sorting Hallucinator</p>
 
                 <div class="algos">
-                    <button style="padding:2px ;">Bubble</button>
-                    <button style="padding:2px "> Selection</button>
-                    <button style="padding:2px ;"> Insertion</button>
-                    <button style="padding:2px ;"> Merge</button>
-                    <button style="padding:2px ;">Quick</button>
+                    <button style='margin-right:16px'>Bubble</button>
+                    <button style='margin-right:16px'> Selection</button>
+                    <button style='margin-right:16px'> Insertion</button>
+                    <button style='margin-right:16px'> Merge</button>
+                    <button style='margin-right:16px'>Quick</button>
                     <button style="padding:2px ;">Heap</button>
                 </div>
             </div>
