--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
                 <div class="algos">
                     <button style='margin-right:16px'>Bubble</button>
-                    <button style='margin-right:16px'> Selection</button>
+                    <button style='margin-right:16px'> Selection .</button>
                     <button style='margin-right:16px'> Insertion</button>
                     <button style='margin-right:16px'> Merge</button>
                     <button style='margin-right:16px'>Quick</button>
