--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
             <div class="header_right">
                 <p class="nav-heading">Sorting Hallucinator</p>
 
-                <div class="algos">
+                <div class="algos" style='margin-right:16px' >
                     <button style='margin-right:16px'>Bubble</button>
-                    <button style='margin-right:16px'> Selection .</button>
+                    <button style='margin-right:16px'> Selection</button>
                     <button style='margin-right:16px'> Insertion</button>
                     <button style='margin-right:16px'> Merge</button>
                     <button style='margin-right:16px'>Quick</button>
